// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshots 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 {
  color: inherit;
  cursor: pointer;
  margin: 0;
  border: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  vertical-align: middle;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  font: inherit;
  padding: 0;
  outline: none;
}

.c0:disabled,
.c0:disabled:hover,
.c0:disabled:active,
.c0.disabled,
.c0.disabled:hover,
.c0.disabled:active {
  cursor: default;
  pointer-events: none;
}

.c1 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-radius: 50%;
  padding: 9px;
  overflow: visible;
  color: #71727a;
}

.c1:hover {
  color: #71727a;
  background: rgba(223,225,237,0.50);
}

.c1:active,
.c1.active {
  background: rgba(223,225,237,0.66);
}

<button
  class="c0 sc-AxheI c1 ButtonIcon ButtonBase"
  tabindex="0"
>
  <span
    class="c2 label"
  />
</button>
`;

exports[`should match snapshots 2`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 {
  color: inherit;
  cursor: pointer;
  margin: 0;
  border: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  vertical-align: middle;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  font: inherit;
  padding: 0;
  outline: none;
}

.c0:disabled,
.c0:disabled:hover,
.c0:disabled:active,
.c0.disabled,
.c0.disabled:hover,
.c0.disabled:active {
  cursor: default;
  pointer-events: none;
}

.c1 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-radius: 50%;
  padding: 9px;
  overflow: visible;
  color: #71727a;
}

.c1:hover {
  color: #71727a;
  background: rgba(223,225,237,0.50);
}

.c1:active,
.c1.active {
  background: rgba(223,225,237,0.66);
}

<button
  class="c0 sc-AxheI c1 ButtonIcon ButtonBase"
  tabindex="0"
>
  <span
    class="c2 label"
  >
    <svg
      aria-hidden="true"
      display="block"
      fill="currentColor"
      focusable="false"
      height="1em"
      role="presentation"
      viewBox="0 0 448 512"
      width="1em"
    >
      <path
        d="M224 480c-17.66 0-32-14.38-32-32.03h-32c0 35.31 28.72 64.03 64 64.03s64-28.72 64-64.03h-32c0 17.65-14.34 32.03-32 32.03zm209.38-145.19c-27.96-26.62-49.34-54.48-49.34-148.91 0-79.59-63.39-144.5-144.04-152.35V16c0-8.84-7.16-16-16-16s-16 7.16-16 16v17.56C127.35 41.41 63.96 106.31 63.96 185.9c0 94.42-21.39 122.29-49.35 148.91-13.97 13.3-18.38 33.41-11.25 51.23C10.64 404.24 28.16 416 48 416h352c19.84 0 37.36-11.77 44.64-29.97 7.13-17.82 2.71-37.92-11.26-51.22zM400 384H48c-14.23 0-21.34-16.47-11.32-26.01 34.86-33.19 59.28-70.34 59.28-172.08C95.96 118.53 153.23 64 224 64c70.76 0 128.04 54.52 128.04 121.9 0 101.35 24.21 138.7 59.28 172.08C421.38 367.57 414.17 384 400 384z"
      />
    </svg>
  </span>
</button>
`;
